plugins {
    id 'java'
    id 'io.quarkus'
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
    implementation 'io.quarkus:quarkus-arc'
    implementation 'io.quarkus:quarkus-resteasy-reactive-jackson'
    implementation 'io.quarkus:quarkus-smallrye-jwt'
    implementation 'io.quarkus:quarkus-jdbc-postgresql'
    implementation 'io.quarkus:quarkus-hibernate-orm-panache'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.modelmapper:modelmapper:3.1.1'
    implementation 'commons-codec:commons-codec:1.15'
    implementation 'org.telegram:telegrambots-longpolling:7.9.0'
    implementation 'org.telegram:telegrambots-client:7.9.0'
    implementation 'org.telegram:telegrambots-extensions:7.9.1'
}

group 'xyz.telegram'
version '1.0.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}